<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/login_horizontal_margin"
    android:layout_marginLeft="@dimen/login_horizontal_margin"
    android:layout_marginEnd="@dimen/login_horizontal_margin"
    android:layout_marginRight="@dimen/login_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textColorHint="#7B7B7B">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:theme="@style/hufu_editTextTheme" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:textColorHint="#7B7B7B">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pin_Verification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_verifi"
                android:inputType="number"
                android:textAllCaps="false"
                android:theme="@style/hufu_editTextTheme" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="#D6D6D6" />

        <TextView
            android:id="@+id/send_verification_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/send_verif"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED" />
</LinearLayout>