<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.TreamDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="13dp"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@mipmap/icon_return" />

        <TextView
            android:id="@+id/team_return_tv"
            android:layout_width="103dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:clickable="true"
            android:focusable="true"
            android:text="返回"
            android:textColor="#ff007aff"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="我的团队"
            android:textStyle="bold"
            android:textColor="#ff000000"
            android:textSize="17sp" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:background="@mipmap/team_info_background">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="80dp"
            android:layout_height="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="我的总投资"
            android:textColor="#fff3f5f7"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_invest_tv"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="3000.00"
            android:textColor="#fff3f5f7"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/total_team_user_tv"
            android:layout_width="103dp"
            android:layout_height="22dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="16dp"
            android:text="团队总人数：1"
            android:textColor="#fff3f5f7"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/total_team_income_tv"
            android:layout_width="180dp"
            android:layout_height="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="团队总效益：5.68"
            android:textColor="#fff3f5f7"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/total_team_user_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@+id/total_team_user_tv" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="-8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/account_num"
                android:textColor="#ff808892"
                android:textSize="14sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/own_team_member"
                android:textColor="#ff808892"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/team_benefi_total"
                android:textColor="#ff808892"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:background="#D3D7DC"
            android:visibility="visible" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/team_srl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/team_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
</LinearLayout>